# Copyright 2023-2026 the Turso authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
    "bindings/java",
    "bindings/javascript",
    "bindings/javascript/sync",
    "bindings/python",
    "bindings/dotnet",
    "bindings/rust",
    "cli",
    "core",
    "extensions/completion",
    "extensions/core",
    "extensions/crypto",
    "extensions/csv",
    "extensions/ipaddr",
    "extensions/percentile",
    "extensions/regexp",
    "extensions/tests",
    "extensions/fuzzy",
    "macros",
    "testing/simulator",
    "sqlite3",
    "testing/stress",
    "testing/sqlite_test_ext",
    "tests",
    "parser",
    "sync/engine",
    "sync/sdk-kit",
    "sql_generation",
    "testing/concurrent-simulator",
    "perf/throughput/turso",
    "perf/throughput/rusqlite",
    "perf/encryption",
    "perf/memory",
    "tools/dbhash",
    "sdk-kit",
    "sdk-kit-macros",
    "testing/differential-oracle/sql_gen_prop",
    "testing/differential-oracle/sql_gen",
    "testing/differential-oracle/fuzzer",
    "testing/sqltests"
]
exclude = ["perf/latency/limbo"]

default-members = [
    "bindings/java",
    "bindings/javascript",
    "bindings/javascript/sync",
    "bindings/python",
    "bindings/dotnet",
    "bindings/rust",
    "cli",
    "core",
    "extensions/completion",
    "extensions/core",
    "extensions/crypto",
    "extensions/csv",
    "extensions/ipaddr",
    "extensions/percentile",
    "extensions/regexp",
    "extensions/tests",
    "extensions/fuzzy",
    "macros",
    "testing/simulator",
    "sqlite3",
    "testing/stress",
    "testing/sqlite_test_ext",
    "tests",
    "parser",
    "sync/engine",
    "sync/sdk-kit",
    "sql_generation",
    "testing/concurrent-simulator",
    "perf/throughput/turso",
    "perf/throughput/rusqlite",
    "perf/encryption",
    "tools/dbhash",
    "sdk-kit",
    "sdk-kit-macros",
    "testing/differential-oracle/sql_gen_prop",
    "testing/differential-oracle/sql_gen",
    "testing/differential-oracle/fuzzer",
    "testing/sqltests"
]

[workspace.package]
version = "0.6.0-pre.28"
authors = ["the Turso authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tursodatabase/turso"

[workspace.dependencies]
turso = { path = "bindings/rust", version = "0.6.0-pre.28" }
turso_node = { path = "bindings/javascript", version = "0.6.0-pre.28" }
turso_sdk_kit = { path = "sdk-kit", version = "0.6.0-pre.28" }
turso_sdk_kit_macros = { path = "sdk-kit-macros", version = "0.6.0-pre.28" }
turso_sync_sdk_kit = { path = "sync/sdk-kit", version = "0.6.0-pre.28" }
limbo_completion = { path = "extensions/completion", version = "0.6.0-pre.28" }
turso_core = { path = "core", version = "0.6.0-pre.28" }
turso_sync_engine = { path = "sync/engine", version = "0.6.0-pre.28" }
turso_ext = { path = "extensions/core", version = "0.6.0-pre.28" }
turso_macros = { path = "macros", version = "0.6.0-pre.28" }
turso_parser = { path = "parser", version = "0.6.0-pre.28" }
sql_generation = { path = "sql_generation" }
turso-dbhash = { path = "tools/dbhash" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.98"
mimalloc = { version = "0.1.47", default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
itertools = "0.14.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
tracing = "0.1.41"
schemars = "1.0.4"
garde = "0.22"
parking_lot = "0.12.4"
tokio = { version = "1.0", default-features = false }
tracing-subscriber = "0.3.20"
futures = "0.3"
clap = "4.5.47"
thiserror = "2.0.16"
tempfile = "3.20.0"
indexmap = "2.11.1"
indicatif = "0.17"
miette = "7.6.0"
bitflags = "2.9.4"
fallible-iterator = "0.3.0"

criterion = "0.5.0"
codspeed-criterion-compat = "4.2.1"
divan = { package = "codspeed-divan-compat", version = "4.2.1" }

chrono = { version = "0.4.42", default-features = false }
hex = "0.4"
antithesis_sdk = { version = "0.2", default-features = false }
cfg-if = "1.0.0"
tracing-appender = "0.2.3"
env_logger = { version = "0.11.6", default-features = false }
regex = "1.11.1"
regex-syntax = { version = "0.8.5", default-features = false }
similar = { version = "2.7.0" }
similar-asserts = { version = "1.7.0" }
bitmaps = { version = "3.2.1", default-features = false }
console-subscriber = { version = "0.4.1" }
either = { version = "1.15" }

# Multi threading testing
loom = { version = "0.7" }
shuttle = { version = "0.8.1" }


[profile.dev.package.similar]
opt-level = 3

[profile.release]
debug = "line-tables-only"
codegen-units = 4
panic = "abort"
lto = "thin"

# Official release profile - maximum optimization for published binaries
# Use for CLI releases, PyPI, npm, Maven, NuGet, etc.
[profile.release-official]
inherits = "release"
codegen-units = 1
lto = true

# override settings for sdk-kit release profiles in order to reduce size of produced binaries
# otherwise, some platforms will have enormous libs (150MB+)
[profile.lib-release]
inherits = "release"
debug = false
codegen-units = 16
lto = false

[profile.fuzzing]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"
panic = "abort"

[profile.antithesis]
inherits = "release"
debug = true
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true
lto = false               # LTO hides function boundaries
codegen-units = 16        # Less cross-unit inlining

[profile.dist]
inherits = "release-official"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(shuttle)', 'cfg(antithesis)'] }

[workspace.lints.clippy]
or_fun_call = "deny"
clear_with_drain = "deny"
collection_is_never_read = "deny"
naive_bytecount = "deny"
stable_sort_primitive = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
redundant_clone = "deny"
assigning_clones = "deny"
